==> MikroElektronika/mikrosdk_v2/targets/riscv/mikroe/gigadevice/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_rcu.h"
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_set_frequency(freqrange,speed) (speed<=100000)?(freqrange + 1):(((freqrange*300U)/1000U)+1U)
#define hal_ll_i2c_get_rcu_clocks_apb1 ((uint16_t)(rcu_clocks.rcu_clocks_apb1 / 1000000))
#define HAL_LL_I2CCLK_MINIMUM_ALLOWED_VALUE (0x02)
#define HAL_LL_I2C_MASTER_SPEED_100K      (100000UL)
#define HAL_LL_I2C_MASTER_SPEED_400K      (400000UL)
#define HAL_LL_I2C_MASTER_SPEED_1M        (1000000UL)
#define HAL_LL_I2C_MASTER_SPEED_3M2       (3200000UL)
#define HAL_LL_I2C_DEFAULT_PASS_COUNT     (10000)
#define HAL_LL_I2C_CKCFG_DTCY_BIT         (14)
#define HAL_LL_I2C_CTL0_I2CEN_BIT         (0)
#define HAL_LL_I2C0EN_BIT                 (21)
#define HAL_LL_I2C1EN_BIT                 (22)
#define HAL_LL_I2C_CTL0_ACKEN_BIT         (10)
#define HAL_LL_I2C_CTL0_POAP_BIT          (11)

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_i2c_get_module_state_address);

    if( NULL != low_level_handle->hal_ll_i2c_master_handle ) {
        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->hal_drv_i2c_master_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_master_set_clock(hal_ll_i2c_hw_specifics_map_local, true);
        hal_ll_i2c_master_alternate_functions_set_state( hal_ll_i2c_hw_specifics_map_local, false );
        hal_ll_i2c_master_set_clock(hal_ll_i2c_hw_specifics_map_local, false);

        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_af = 0;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_af = 0;
    }
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    volatile uint32_t status_reg_clear;

    if ( HAL_LL_I2C_MASTER_WRITE_THEN_READ != mode ) {
        while( !hal_ll_i2c_master_is_idle( hal_ll_hw_reg ));
    }

    if( 2 == len_read_data ) {
        set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_POAP_BIT );
    }

    hal_ll_i2c_master_start(map);

    set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_I2CEN_BIT );

    hal_ll_i2c_master_start(map);

    hal_ll_hw_reg->dat = ( map->address << 1 ) | 1;

    if ( len_read_data < 3 ) {
        clear_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_ACKEN_BIT );
    }

    while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_ADDSEND_BIT ));

    // Reading the status registers clears the ADDSEND bit
    status_reg_clear = hal_ll_hw_reg->stat0;
    status_reg_clear = hal_ll_hw_reg->stat1;

    if( 1 == len_read_data ) {
        set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_STOP_BIT );
    }

    while( len_read_data ){
        if( 3 == len_read_data ){
            while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_BTC_BIT ));
            clear_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_ACKEN_BIT );
        }
        if( 2 == len_read_data ) {
            while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_BTC_BIT ));
            set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_STOP_BIT );
        }

        if( check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_RBNE_BIT )) {
            *read_data_buf = hal_ll_hw_reg->dat;
            read_data_buf++;
            len_read_data--;
        }
    }

    while( hal_ll_hw_reg->ctl0 & HAL_LL_I2C_CTL0_STOP_MASK );
    set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_ACKEN_BIT );
    clear_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_POAP_BIT );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    volatile uint32_t status_reg_clear;

    while( !hal_ll_i2c_master_is_idle( hal_ll_hw_reg ));

    hal_ll_i2c_master_start(map);

    hal_ll_hw_reg->dat = ( map->address << 1 );

    while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_ADDSEND_BIT ));

    // Reading the status registers clears the ADDSEND bit
    status_reg_clear = hal_ll_hw_reg->stat0;
    status_reg_clear = hal_ll_hw_reg->stat1;

    while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_TBE_BIT ));

    while( len_write_data-- ){
        hal_ll_hw_reg->dat = *write_data_buf;
        write_data_buf++;
        while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_BTC_BIT ));
    }

    if( HAL_LL_I2C_MASTER_WRITE_THEN_READ != mode ) {
        set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_STOP_BIT );
        while( hal_ll_hw_reg->ctl0 & HAL_LL_I2C_CTL0_STOP_MASK );
    } else {
        set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_START_BIT );
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;

    set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_START_BIT );

    if ( check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_LOSTARB_BIT ) )
        return HAL_LL_I2C_MASTER_ARBITRATION_LOST;

    while( !check_reg_bit( &( hal_ll_hw_reg->stat0 ), HAL_LL_I2C_STAT0_SBSEND_BIT ));

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t frequency_range;
    rcu_clocks_t rcu_clocks;

    system_rcu_get_clocks( &rcu_clocks );

    frequency_range = hal_ll_i2c_get_rcu_clocks_apb1;

    hal_ll_hw_reg->ctl1 &= ~HAL_LL_I2C_CTL1_I2CCLK_MASK;

    hal_ll_hw_reg->ctl1 = frequency_range;

    clear_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_I2CEN_BIT );

    hal_ll_hw_reg->rt = hal_ll_set_frequency( frequency_range, map->speed );

    hal_ll_i2c_calculate_speed( rcu_clocks.rcu_clocks_apb1, map );

    hal_ll_hw_reg->ctl0 = 0;

    set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_I2CEN_BIT );

    set_reg_bit( &( hal_ll_hw_reg->ctl0 ), HAL_LL_I2C_CTL0_ACKEN_BIT );
}
