==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic16/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_odcon_map.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#include "delays.h"
#include "mcu.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_pin(port_name) (port_name & HAL_LL_NIBBLE_LOW_8BIT)
#define hal_ll_port(port_name) ((port_name & HAL_LL_NIBBLE_HIGH_8BIT) >> 4)
#define hal_ll_i2c_check_speed(_speed) (((Get_Fosc_kHz()*1000/_speed)-4)/4)
#define hal_ll_i2c_check_speed(_speed) (((Get_Fosc_kHz()*1000/_speed)/4)-1)
#define HAL_LL_I2C_MAX_SPEED_VALUE 0xFFU
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_SPEED_400K 400000UL
#define HAL_LL_I2C_DEFAULT_PASS_COUNT 10000
#define HAL_LL_SSPXCON1_SETUP 0x38U
#define HAL_LL_I2C_IDLE_MASK 0x1FU
#define HAL_LL_SSPSTAT_R_NOT_W_BIT 2
#define HAL_LL_SSPSTAT_CKE_BIT 6
#define HAL_LL_SSPSTAT_SMP_BIT 7
#define HAL_LL_SSPCON2_SEN_BIT 0
#define HAL_LL_SSPCON2_RSEN_BIT 1

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_i2c_get_specifics(hal_ll_i2c_get_module_state_address);

    if( low_level_handle->hal_ll_i2c_master_handle != NULL ) {
        // Used only for chips which have I2C PPS pins
        #if HAL_LL_I2C_PPS_ENABLED == true
        hal_ll_i2c_hw_set_module_power(hal_ll_i2c_hw_specifics_map_local, true);
        hal_ll_pps_set_state(hal_ll_i2c_hw_specifics_map_local, false);
        #endif
        hal_ll_i2c_hw_set_module_power(hal_ll_i2c_hw_specifics_map_local, false);

        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->hal_drv_i2c_master_handle = NULL;
        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed.speed_value = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_pps = HAL_LL_PPS_FUNCTIONALITY_NONE;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_pps = HAL_LL_PPS_FUNCTIONALITY_NONE;
    }
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
  

    switch ( map->module_index )
    {
        #ifdef I2C_MODULE
        case ( hal_ll_i2c_module_num(I2C_MODULE) ):
            break;
        #endif
        #ifdef I2C_MODULE_1
        
        case ( hal_ll_i2c_module_num(I2C_MODULE_1) ):

            hal_ll_i2c_master_start(map);
    

            uint8_t dev_addr = (0x50 << 1) | 0x01;  // slave address reading mode
            SSP1BUF = dev_addr;
            while(!SSP1IF);
            SSP1IF = 0;

            for(int transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++){
                SSP1CON2bits.RCEN = 1;
                while(!SSP1IF);
                SSP1IF = 0;
                uint8_t recv = SSP1BUF;
                read_data_buf[transfer_counter] = recv;
                
                if ( transfer_counter < ( len_read_data - 1 ) ) {
                    SSP1CON2bits.ACKDT = 0;
                } else {
                    SSP1CON2bits.ACKDT = 1;
                }

                SSP1CON2bits.ACKEN = 1;
                while(!SSP1IF);
                SSP1IF = 0;
            }


            SSP1CON2bits.PEN = 1;
            while(!SSP1IF);
            SSP1IF = 0;

            break;
        
        #endif
        #ifdef I2C_MODULE_2
        case ( hal_ll_i2c_module_num(I2C_MODULE_2) ):
            
            hal_ll_i2c_master_start(map);
    

            dev_addr = (0x50 << 1) | 0x01;  // slave address reading mode
            SSP2BUF = dev_addr;
            while(!SSP2IF);
            SSP2IF = 0;

            for(int transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++){
                SSP2CON2bits.RCEN = 1;
                while(!SSP2IF);
                SSP2IF = 0;
                uint8_t recv = SSP2BUF;
                read_data_buf[transfer_counter] = recv;
                
                if ( transfer_counter < ( len_read_data - 1 ) ) {
                    SSP2CON2bits.ACKDT = 0;
                } else {
                    SSP2CON2bits.ACKDT = 1;
                }

                SSP2CON2bits.ACKEN = 1;
                while(!SSP2IF);
                SSP2IF = 0;
            }


            SSP2CON2bits.PEN = 1;
            while(!SSP2IF);
            SSP2IF = 0;

            break;
        #endif
        

        default:
            break;
    }


    

    /*TRISDbits.TRISD6 = 0;
    ANSELDbits.ANSELD6 = 0;
    LATDbits.LATD6 = 1;*/

    

    return HAL_LL_I2C_MASTER_SUCCESS;
  
    
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    

    switch ( map->module_index )
    {
        #ifdef I2C_MODULE
        case ( hal_ll_i2c_module_num(I2C_MODULE) ):
            break;
        #endif
        #ifdef I2C_MODULE_1
        
        case ( hal_ll_i2c_module_num(I2C_MODULE_1) ):

            hal_ll_i2c_master_start(map);
    
            uint8_t dev_addr = (0x50 << 1) & 0xFE;  // slave address writing mode
            SSP1BUF = dev_addr;
            while(!SSP1IF);
            SSP1IF = 0;
            
            for(int i = 0; i < len_write_data; i++){
                SSP1BUF = write_data_buf[i];
                while(!SSP1IF);
                SSP1IF = 0;
            }

            SSP1CON2bits.PEN = 1;
            while(!SSP1IF);
            SSP1IF = 0;

            break;
        
        #endif
        #ifdef I2C_MODULE_2
        case ( hal_ll_i2c_module_num(I2C_MODULE_2) ):
            
            hal_ll_i2c_master_start(map);
    
            dev_addr = (0x50 << 1) & 0xFE;  // slave address writing mode
            SSP2BUF = dev_addr;
            while(!SSP2IF);
            SSP2IF = 0;
            
            for(int i = 0; i < len_write_data; i++){
                SSP2BUF = write_data_buf[i];
                while(!SSP2IF);
                SSP2IF = 0;
            }

            SSP2CON2bits.PEN = 1;
            while(!SSP2IF);
            SSP2IF = 0;

            break;
        #endif
        

        default:
            break;
    }

    
    /*TRISDbits.TRISD6 = 0;
    ANSELDbits.ANSELD6 = 0;
    LATDbits.LATD6 = 1;*/

    return HAL_LL_I2C_MASTER_SUCCESS;
    

    
    /*const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    size_t transfer_counter = NULL;
    hal_ll_err_t status = NULL;

    status = hal_ll_i2c_master_start( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    clear_reg_bit( hal_ll_hw_reg->pir_reg_addr , hal_ll_i2c_sspif[ map->module_index ]);
    write_reg( hal_ll_hw_reg->sspbuf_reg_addr, ( map->address << 1 ) );

    status = hal_ll_i2c_master_check_write( map );
    if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    for ( transfer_counter = 0; transfer_counter < len_write_data; transfer_counter++ )
    {
        write_reg( hal_ll_hw_reg->sspbuf_reg_addr, write_data_buf[ transfer_counter ] );

        status = hal_ll_i2c_master_check_write( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    }*/

   /* if ( ( mode == HAL_LL_I2C_MASTER_END_MODE_RESTART ) || ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) ) {*/
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
      /*  #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif
        status = hal_ll_i2c_master_restart( map );
        if( status != HAL_LL_I2C_MASTER_SUCCESS ) {
            return status;
        }
    } else if ( mode == HAL_LL_I2C_MASTER_END_MODE_STOP ) {
        set_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr , HAL_LL_SSPCON2_PEN_BIT );
    }

    if ( !check_reg_bit( hal_ll_hw_reg->sspcon2_reg_addr, HAL_LL_SSPCON2_ACKSTAT_BIT ) ) {
        return HAL_LL_I2C_MASTER_SUCCESS;
    } else {
        return HAL_LL_I2C_MASTER_ERROR;
    }*/
}

static hal_ll_err_t hal_ll_i2c_master_start( hal_ll_i2c_hw_specifics_map_t *map ) {
   

    

    switch ( map->module_index )
    {
        #ifdef I2C_MODULE
        case ( hal_ll_i2c_module_num(I2C_MODULE) ):
            break;
        #endif
        #ifdef I2C_MODULE_1
        
        case ( hal_ll_i2c_module_num(I2C_MODULE_1) ):


            SSP1CON2bits.SEN = 1;
            while(!SSP1IF);
            SSP1IF = 0;


            break;
        
        #endif
        #ifdef I2C_MODULE_2
        case ( hal_ll_i2c_module_num(I2C_MODULE_2) ):
            
            SSP2CON2bits.SEN = 1;
            while(!SSP2IF);
            SSP2IF = 0;
            break;
        #endif
        

        default:
            break;
    }




    return HAL_LL_I2C_MASTER_SUCCESS; 

    
}

static void hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
  

    volatile uint8_t* trisc_reg = (volatile uint8_t*) TRISC_BASE_ADDRESS;
    volatile uint8_t* anselc_reg = (volatile uint8_t*) ANSELC_BASE_ADDRESS;
    volatile uint8_t* odconc_reg = (volatile uint8_t*) ODCONC_BASE_ADDRESS;

    volatile uint8_t* trisb_reg = (volatile uint8_t*) TRISB_BASE_ADDRESS;
    volatile uint8_t* anselb_reg = (volatile uint8_t*) ANSELB_BASE_ADDRESS;
    volatile uint8_t* odconb_reg = (volatile uint8_t*) ODCONB_BASE_ADDRESS;

    uint32_t osc = Get_Fosc_kHz();

    switch ( map->module_index )
    {
        #ifdef I2C_MODULE
        #ifdef HAL_LL_PMD_I2C_ADDRESS
        case ( hal_ll_i2c_module_num(I2C_MODULE) ):
            ( hal_ll_state )?( clear_reg_bit( HAL_LL_PMD_I2C_ADDRESS, HAL_LL_SSP_MODULE_BIT ) ):( set_reg_bit( HAL_LL_PMD_I2C_ADDRESS, HAL_LL_SSP_MODULE_BIT ) );
            break;
        #endif
        #endif
        #ifdef I2C_MODULE_1
        
        case ( hal_ll_i2c_module_num(I2C_MODULE_1) ):


           *trisc_reg = *trisc_reg | 0b00001000; // RC3,4 inputs
            *trisc_reg = *trisc_reg | 0b00010000;
            
            *anselc_reg = *anselc_reg & 0b11110111; // RC3,4 digital pins
            *anselc_reg = *anselc_reg & 0b11101111;

            *odconc_reg = *odconc_reg | 0b00010000;
            *odconc_reg = *odconc_reg | 0b00001000;

             SSP1STAT = 0x00;
             SSP1CON1 = 0x00;
             SSP1CON2 = 0x00;
             SSP1CON3 = 0x00;
             uint32_t speed = (uint32_t)map->speed.speed_value;
             if(speed >= HAL_LL_I2C_MASTER_SPEED_400K){
                 SSP1STATbits.SMP = 0;   // slew rate enabled (bit7)
                

            }
             else{
                 SSP1STATbits.SMP = 1;
                 
             }
             SSP1CON1bits.SSPM = 0b1000;  // master
             
             //SSP1ADD = speed; <<-- real value
             SSP1ADD = 0x4F;  // ATTENTION, hardocoded because NECTO Studio couldn't make changes to OSC_KHZ macro   
             SSP1CON1bits.SSPEN = 1;   // enable i2c
          

            break;
        
        #endif
        #ifdef I2C_MODULE_2
        //#ifdef HAL_LL_PMD_I2C2_ADDRESS
        case ( hal_ll_i2c_module_num(I2C_MODULE_2) ):
            *trisb_reg = *trisb_reg | 0b00000010; // RB1,2 inputs
            *trisb_reg = *trisb_reg | 0b00000100;
            
            *anselb_reg = *anselb_reg & 0b11111101; // RB1,2 digital pins
            *anselb_reg = *anselb_reg & 0b11111011;

            *odconb_reg = *odconb_reg | 0b00000100;  // open drain control
            *odconb_reg = *odconb_reg | 0b00000010;

            SSP2STAT = 0x00;
            SSP2CON1 = 0x00;
            SSP2CON2 = 0x00;
            SSP2CON3 = 0x00;
            speed = (uint32_t)map->speed.speed_value;
            if(speed >= HAL_LL_I2C_MASTER_SPEED_400K){
                SSP2STATbits.SMP = 0;   // slew rate enabled (bit7)
            }
            else{
                SSP2STATbits.SMP = 1;
            }
            SSP2CON1bits.SSPM = 0b1000;  // master
            SSP2ADD = 0x4F;    
            SSP2CON1bits.SSPEN = 1;   // enable i2c
 
            break;
        #endif
        //#endif

        default:
            break;
    }

}
